<resources>
    <string name="app_name">Popular Movies 1</string>
    <string name="sort_popular">Popular Movies</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="menu_group_title">Sort By</string>
    <string name="image_url">http://image.tmdb.org/t/p/w780/</string>
    <string name="loading_image">Loading</string>
    <string name="description">Description:</string>
    <string name="title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
</resources>
